add twitter handle

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
               <p style="text-align:center">
                 <a href="https://github.com/daia99">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=EgdmMxUAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://twitter.com/andrewdai99"> Twitter </a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/andrew-dai-99372016a/"> LinkedIn </a>
               </p>
             </td>
