--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,65 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Other Projects</h2>
+              <p> These include coursework, side projects and unpublished research work. 
+              </p>
+            </td>
+          </tr>
+        </table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+
+          {% for post in site.posts %}
+          {% for cat in post.categories %}
+          {% if cat != 'research' %}
+          <tr>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            </td>
+            <td style="padding:2.5%;width:75%;vertical-align:middle">
+              <a href="{{post.main}}"><h3>{{post.title}}</h3></a>
+              <br>
+              <em>{{post.categories}} {{post.course}}</em>
+              <br>
+              {{ post.date | date: "%Y-%m-%d" }}
+
+              <br>
+              {% if post.code %}
+              <a href="{{post.code}}">code</a>
+              {% endif %}
+              {% if post.video %}
+              / <a href="{{post.video}}">video</a>
+              {% endif %}
+              {% if post.website %}
+              / <a href="{{post.website}}">website</a>
+              {% endif %}
+              {% if post.report %}
+              / <a href="{{post.report}}">report</a>
+              {% endif %}
+              {% if post.paper %}
+              / <a href="{{post.paper}}">paper</a>
+              {% endif %}
+              {% if post.poster %}
+              / <a href="{{post.poster}}">poster</a>
+              {% endif %}
+              {% if post.slides %}
+              / <a href="{{post.slides}}">slides</a>
+              {% endif %}
+              {% if post.tutorial %}
+              <a href="{{post.tutorial}}">tutorial</a>
+              {% endif %}
+              <p></p>
+              {{ post.excerpt }}
+            </td>
+          </tr>
+          {% endif %}
+          {% endfor %}
+          {% endfor %}
+        </table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
