--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
               <h1>
                 Andrew Dai
               </h1>
-              <p>I am a Research Engineer at <a href="https://aleph-alpha.com/">Aleph Alpha</a>, where I work on Large Language Models (LLMs), <a href="https://quality-diversity.github.io/">Quality Diversity (QD)</a>, and <a href="https://github.com/jennyzzt/awesome-open-ended">open-endedness</a>.
+              <p>I am an AI Researcher at <a href="https://aleph-alpha.com/">Aleph Alpha</a>, where I work on Large Language Models (LLMs), <a href="https://quality-diversity.github.io/">Quality Diversity (QD)</a>, and <a href="https://github.com/jennyzzt/awesome-open-ended">open-endedness</a>.
               </p>
               <p>My humble beginnings started with Mechanical Engineering in <a href="https://www.tcd.ie/engineering/">Trinity College Dublin</a>, where I co-founded <a href="https://www.formulatrinity.ie/autonomous">Formula Trinity Autonomous</a> with amazing close friends and teammates.
               </p>
