--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
               <h1>
                 Andrew Dai
               </h1>
-              <p>I am an AI Researcher at <a href="https://aleph-alpha.com/">Aleph Alpha</a>, where I work on Large Language Models (LLMs), <a href="https://quality-diversity.github.io/">Quality Diversity (QD)</a>, and <a href="https://github.com/jennyzzt/awesome-open-ended">open-endedness</a>.
+              <p>I am a Researcher at <a href="https://sakana.ai/">Sakana AI</a>. My research background spans Large Language Models (LLMs), <a href="https://quality-diversity.github.io/">Quality Diversity (QD)</a>, and <a href="https://github.com/jennyzzt/awesome-open-ended">open-endedness</a>. I also worked at <a href="https://aleph-alpha.com/">Aleph Alpha</a>.
               </p>
               <p>My humble beginnings started with Mechanical Engineering in <a href="https://www.tcd.ie/engineering/">Trinity College Dublin</a>, where I co-founded <a href="https://www.formulatrinity.ie/autonomous">Formula Trinity Autonomous</a> with amazing close friends and teammates.
               </p>
               </p>
-              <p> After reading <a href="https://www.google.com/search?hl=en&q=why%20greatness%20cannot%20be%20planned">Ken and Joel's book</a>, I've learned that <em>ambitious</em> objectives can deceive us from greatness, inspiring me on a collaborative journey to reflect on the way that I (and artificial systems that I build with my team) can <em>"<a href="https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=2529&context=facultybib2010">achieve our highest goals by being willing to abandon them</a>"</em>, ultimately making us <em><a href="https://qdaif.github.io/">more creative</a></em>.
+              <p> After reading <a href="https://www.google.com/search?hl=en&q=why%20greatness%20cannot%20be%20planned">Ken and Joel's book</a> in 2021 with close friends, I've learned that <em>ambitious</em> objectives can deceive us from greatness, inspiring me on a collaborative journey to reflect on the way that I (and artificial systems that I build with my team) can <em>"<a href="https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=2529&context=facultybib2010">achieve our highest goals by being willing to abandon them</a>"</em>, ultimately making us <em><a href="https://qdaif.github.io/">more creative</a></em>.
               </p>
               <p style="text-align:center">
                 <a href="https://github.com/daia99">GitHub</a> &nbsp;/&nbsp;
